# Conecta2030_CanDAQ

./: .gitignore  CMakeLists.txt  README.md  config.json
include/: can_defs.hpp  config.hpp  drivers.hpp
src/: config.cpp  drivers.cpp  generator.cpp  main.cpp
